test/error/MethodPrivateVirtual.fu
public class Test
{
	virtual //ERROR: Private method cannot be virtual
		bool Run()
	{
		return true;
	}
}
